# betterSDL

./: .gitignore  CMakeLists.txt
src/: Event.cpp  Event.h  Game.h  InputHandler.cpp  InputHandler.h  JoystickEvent.cpp  JoystickEvent.h  LoaderParams.h  Player.cpp  Player.h  QuitEvent.cpp  QuitEvent.h  TextureManager.cpp  TextureManager.h  Vector2D.h  Window.cpp  Window.h  cleanup.h  main.cpp
